# uwurs

./: Cargo.toml  README.md
.github/workflows/: rust.yml
src/: lib.rs
src/uwuifier/: mappings.rs  mod.rs  transformations.rs  utils.rs
tests/: main.rs  mappings.rs  transformations.rs  utils.rs  uwu_tests.rs
